--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.pv</groupId>
 	<artifactId>basic-project</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>Basic Project</name>
-	<description>Basic Project Structure</description>
+	<description>Project which focuses on Java Fundamentals</description>
 
 	<dependencies>
 		<dependency>
