--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqa.pv</groupId>
-	<artifactId>basic-project</artifactId>
+	<artifactId>java-basics</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>Basic Project</name>
+	<name>Java Basics</name>
 	<description>Project which focuses on Java Fundamentals</description>
 
 	<dependencies>
